# fb2contents

./: Cargo.toml  LICENSE  README.md  fb2contents
.github/workflows/: build.yml  release.yml
src/: main.rs
