[package]
name = "fb2contents"
version = "0.1.0"
authors = ["vitaliy <vitaliy@velikodniy.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.64"
quick-xml = { version = "0.22", features = [ "serialize", "encoding" ] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"